--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,3 +20,37 @@ jobs:
           wget https://thundercomm.s3.ap-northeast-1.amazonaws.com/uploads/web/rubik-pi-3/20250331/FlatBuild_RUBIKPi-3_xx.xx_Debian13.R.debug.ES.r000001.zip
           unzip FlatBuild_RUBIKPi-3_xx.xx_Debian13.R.debug.ES.r000001.zip
           rm -v FlatBuild_RUBIKPi-3_xx.xx_Debian13.R.debug.ES.r000001.zip
+      - name: Compress
+        run: |
+          sudo apt install xz-utils -y
+          xz -z -k -9 -c ${{ github.workspace }}/FlatBuild_RUBIKPi-3_xx.xx_Debian13.R.debug.ES.r000001/ufs/system.img > rubik.img.xz
+      - uses: actions/upload-artifact@v4.3.4
+        with:
+          name: rubik.img.xz
+          path: rubik.img.xz
+          if-no-files-found: error
+          retention-days: 1
+  release:
+    needs: [build]
+    runs-on: ubuntu-22.04
+    steps:
+      # Download literally every single artifact
+      - uses: actions/download-artifact@v4.1.8
+      - run: find
+      # Push to dev release
+      - uses: pyTooling/Actions/releaser@v1.0.5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          tag: "Dev"
+          rm: true
+          files: |
+            **/*.xz
+        if: github.event_name == 'push'
+      # Upload archive to GH tag if tagged
+      - uses: softprops/action-gh-release@v2.0.8
+        with:
+          files: |
+            **/*.xz
+        if: startsWith(github.ref, 'refs/tags/v')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
